feat: TWA Android 빌드 설정 추가 및 .gitignore 보안 강화
- android/ : TWA(Trusted Web Activity) Android 프로젝트 소스 추가
- twa-manifest.json : bubblewrap TWA 설정 파일 추가
- public/.well-known/assetlinks.json : Digital Asset Links 파일 추가
- store_icon.png : 스토어 아이콘 추가
- gradle 빌드 시스템 파일 추가 (gradlew, gradle.properties 등)
- .gitignore : 키스토어, APK/AAB, 비밀번호 파일 등 민감 파일 제외 처리

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,38 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# ============================================
+# 🔒 Android / TWA 빌드 - 보안 민감 파일
+# ============================================
+
+# 앱 서명 키스토어 - 절대 공개 저장소에 올리면 안 됨
+*.keystore
+*.jks
+
+# 빌드 자동화 입력 파일 (비밀번호 포함 가능)
+bubblewrap_answers.txt
+inputs.txt
+manifest-checksum.txt
+
+# ============================================
+# 📦 Android / TWA 빌드 산출물
+# ============================================
+
+# APK / AAB 바이너리
+*.apk
+*.aab
+*.idsig
+
+# Android Gradle 빌드 캐시
+.gradle/
+build/
+app/build/
+android/.gradle/
+android/build/
+
+# Gradle 로컬 설정 (개발 환경 의존)
+local.properties
+
+# 루트 assetlinks.json (public/.well-known/assetlinks.json과 중복)
+/assetlinks.json
